review: descriptor with plan
* refactor `deposit_transaction` and print
vault balance

* refer to compiler example instead of duplicating

* get the vault descriptor from the `Wallet` structure

--- a/crates/wallet/Cargo.toml
+++ b/crates/wallet/Cargo.toml
@@ -50,7 +50,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 [[example]]
 name = "descriptor_with_plan"
 path = "examples/descriptor_with_plan.rs"
-required-features = ["compiler"]
+required-features = []
 
 [[example]]
 name = "mnemonic_to_descriptors"
